Configuração spring security

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,7 @@ Duplicate.user.username=Alguém já possui este nome de usuário.
 Size.user.password=Sua senha deve conter pelo menos 8 caracteres.
 Size.user.passwordConfirmation=Sua senha deve conter pelo menos 8 caracteres.
 Diff.user.passwordConfirmation=Essas senhas não correspondem.
+
+# login messages
+Login.error=Seu nome de usuário e/ou senha são inválidos.
+Logout.success=Logout realizado com sucesso.
