--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 NotEmpty=Este campo é obrigatório.
 NotBlank=Este campo é obrigatório.
+Size.user.name=Utilize entre 3 e 50 caracteres.
 Size.user.username=Utilize entre 6 e 32 caracteres.
 Duplicate.user.username=Alguém já possui este nome de usuário.
 Size.user.password=Sua senha deve conter pelo menos 8 caracteres.
