Página de postagem

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
 NotEmpty=Este campo é obrigatório.
 NotBlank=Este campo é obrigatório.
+NotNull=Este campo é obrigatório.
 Size.user.name=Utilize entre 3 e 50 caracteres.
 Size.user.username=Utilize entre 6 e 32 caracteres.
-Duplicate.user.username=Alguém já possui este nome de usuário.
+Duplicate.user.username=Este nome de usuário já está em uso.
 Size.user.password=Sua senha deve conter pelo menos 8 caracteres.
 Size.user.passwordConfirmation=Sua senha deve conter pelo menos 8 caracteres.
-Diff.user.passwordConfirmation=Essas senhas não correspondem.
+Diff.user.passwordConfirmation=As senhas não correspondem.
